@@ -49,7 +49,6 @@
 #else /* SDCC issues */
 # define SKIP_HEXDOUBLE /* bug #2536 */
 # define SKIP_LONG_DOUBLE /* long double not yet supported */
-# define SKIP_UNIVERSAL
 # define SKIP_COMPOUND /* compound literals not yet supported */
 # define SKIP_VLA /* variable-length arrays not supported */
 # define SKIP_INLINE /* bug #1900 */
